# FastAPITemplate

./: .gitignore  README.md  manage.py  pyproject.toml
