[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-manage"
version = "0.1.0"
description = "CLI tool to scaffold and manage FastAPI projects using uv and SQLModel."
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "uv",
]

[project.scripts]
fastapi-manage = "manage:app"

[tool.setuptools]
py-modules = ["manage"]


